[FIX] track title overflows on mobile

--- a/widgets/audio_playlist/src/style.css
+++ b/widgets/audio_playlist/src/style.css
@@ -1,38 +1,3 @@
-/* Full-screen overlay */
-#loading-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgb(31, 41, 55) !important;
-    /* semi-transparent black background */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-/* Spinner style */
-.spinner {
-    border: 8px solid rgba(255, 255, 255, 0.3);
-    border-top: 8px solid #fff;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
 img {
     border-radius: 8px;
 }
@@ -49,18 +14,15 @@ img {
 }
 
 .album-track-title {
-    white-space: nowrap !important;
-    overflow: hidden !important;
-    text-overflow: ellipsis !important;
-    flex-grow: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .m-track-title {
-    white-space: nowrap !important;
-    overflow: hidden !important;
-    text-overflow: ellipsis !important;
-    display: block !important;
-    max-width: 100% !important;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #songList {
@@ -89,4 +51,14 @@ button {
 #songList li:hover .track-duration,
 #songList li.playing .track-duration {
     color: white;
+}
+
+@media screen and (max-width: 450px) {
+    .album-track-title {
+        max-width: 225px;
+    }
+
+    .m-track-title {
+        max-width: 180px;
+    }
 }
