--- a/widgets/audio_track_player/src/audio-track-player.css
+++ b/widgets/audio_track_player/src/audio-track-player.css
@@ -25,7 +25,7 @@
     transform: scale(1.1);
 }
 
-.z-index-1 {
+.z-index-10 {
     z-index: 10;
 }
 
@@ -204,4 +204,10 @@
 .progress-duration-container {
     width: 100%;
     margin-top: 8px;
+}
+
+@media screen and (max-width: 450px) {
+    .track-details {
+        max-width: 275px;
+    }
 }
